package exceptions;

public class ReservationException extends Exception{

    public ReservationException(String message){
        super(message);
    }
}
